--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,10 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 
 add_executable(Matam_hw1
-        BlockChain.cpp
         BlockChain.h
         Transaction.cpp
         Transaction.h
         Utilities.cpp
-        Utilities.h)
+        Utilities.h
+        BlockChain.cpp
+        BlockChain.cpp)
